downgrade to java 8 since google cloud only supports 8 and upgrading to 11 has lots of breaking changes